# odbc-crusher

./: .coverage  .gitignore  AGENTS.md  AGENT_INSTRUCTIONS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  DRIVER_BUGS.md  FIREBIRD_ODBC_RECOMMENDATIONS.md  INITIAL_PROMPT.md  MOCK_DRIVER_PLAN.md  ODBC_CRUSHER_RECOMMENDATIONS.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE_9_COMPLETION.md  PHASE_9_STATUS.md  PROJECT_PLAN.md  QUICKSTART.md  README.md  STATUS.md  fetch-stress-test.ps1  mysql_ansi.json  mysql_ansi_results.json  mysql_unicode.json  pyproject.toml  sqlite_ODBC_RECOMMENDATIONS.md  test-report.json  test_config_mock.ps1
.github/workflows/: ci.yml  release.yml  stress-test.yml
cmake/: CompilerWarnings.cmake  Platform.cmake  Version.cmake
docs/: GETTING_STARTED.md
include/odbc_crusher/: version.hpp  version.hpp.in
mock-driver/: .gitignore  CMakeLists.txt  LICENSE  README.md  test_simple.cpp  test_simple_CMakeLists.txt
mock-driver/install/: register.ps1  register_mock_driver.reg
mock-driver/src/: mockodbc.def
mock-driver/src/driver/: common.hpp  config.cpp  config.hpp  connection.cpp  descriptor.cpp  diagnostics.cpp  diagnostics.hpp  driver_main.cpp  environment.cpp  handles.cpp  handles.hpp  statement.cpp
mock-driver/src/mock/: behaviors.cpp  behaviors.hpp  mock_catalog.cpp  mock_catalog.hpp  mock_data.cpp  mock_data.hpp  mock_types.cpp  mock_types.hpp
mock-driver/src/odbc/: catalog_api.cpp  connection_api.cpp  descriptor_api.cpp  diagnostic_api.cpp  info_api.cpp  statement_api.cpp  transaction_api.cpp  unicode_wrappers.cpp
mock-driver/src/utils/: string_utils.cpp  string_utils.hpp
mock-driver/tests/: test_config.cpp  test_connection.cpp  test_error_injection.cpp  test_gettypeinfo.cpp  test_handles.cpp  test_main.cpp  test_performance.cpp
recommendations/: duckdb_ODBC_RECOMMENDATIONS.md  mariadb_ODBC_RECOMMENDATIONS.md  postgresql_ODBC_RECOMMENDATIONS.md
recommendations/prompts/: clickhouse-ODBC-CRUSHER-PROMPT.md  duckdb-ODBC-CRUSHER-PROMPT.md  mariadb-ODBC-CRUSHER-PROMPT.md  mysql-ODBC-CRUSHER-PROMPT.md  postgresql-ODBC-CRUSHER-PROMPT.md
src/: CMakeLists.txt  main.cpp
src/cli/: CMakeLists.txt  cli_parser.cpp  cli_parser.hpp  config.cpp  config.hpp
src/core/: CMakeLists.txt  crash_guard.cpp  crash_guard.hpp  logger.cpp  logger.hpp  odbc_connection.cpp  odbc_connection.hpp  odbc_environment.cpp  odbc_environment.hpp  odbc_error.cpp  odbc_error.hpp  odbc_statement.cpp  odbc_statement.hpp
src/discovery/: CMakeLists.txt  driver_info.cpp  driver_info.hpp  function_info.cpp  function_info.hpp  type_info.cpp  type_info.hpp
src/odbc_crusher/: __init__.py  cli.py  connection.py  driver_info.py  reporter.py  sql_dialect.py  test_runner.py
src/odbc_crusher/tests/: __init__.py  advanced_tests.py  base.py  capability_tests.py  connection_tests.py  datatype_tests.py  handle_tests.py  metadata_tests.py  statement_tests.py
src/odbc_crusher/utils/: __init__.py  odbc_helpers.py
src/reporting/: CMakeLists.txt  console_reporter.cpp  console_reporter.hpp  json_reporter.cpp  json_reporter.hpp  reporter.hpp
src/tests/: CMakeLists.txt  advanced_tests.cpp  advanced_tests.hpp  array_param_tests.cpp  array_param_tests.hpp  boundary_tests.cpp  boundary_tests.hpp  buffer_validation_tests.cpp  buffer_validation_tests.hpp  cancellation_tests.cpp  cancellation_tests.hpp  catalog_depth_tests.cpp  catalog_depth_tests.hpp  connection_tests.cpp  connection_tests.hpp  cursor_behavior_tests.cpp  cursor_behavior_tests.hpp  cursor_stress_tests.cpp  cursor_stress_tests.hpp  datatype_edge_tests.cpp  datatype_edge_tests.hpp  datatype_tests.cpp  datatype_tests.hpp  descriptor_tests.cpp  descriptor_tests.hpp  diagnostic_depth_tests.cpp  diagnostic_depth_tests.hpp  error_queue_tests.cpp  error_queue_tests.hpp  escape_sequence_tests.cpp  escape_sequence_tests.hpp  metadata_tests.cpp  metadata_tests.hpp  numeric_struct_tests.cpp  numeric_struct_tests.hpp  param_binding_tests.cpp  param_binding_tests.hpp  sqlstate_tests.cpp  sqlstate_tests.hpp  sqlwchar_utils.hpp  (+10 more)
tests/: CMakeLists.txt  mock_connection.hpp  test_advanced_tests.cpp  test_array_param_tests.cpp  test_base.py  test_boundary_tests.cpp  test_buffer_validation.cpp  test_cancellation_tests.cpp  test_catalog_depth_tests.cpp  test_connection.py  test_connection_tests.cpp  test_crash_guard.cpp  test_cursor_behavior_tests.cpp  test_cursor_stress_tests.cpp  test_datatype_edge_tests.cpp  test_datatype_tests.cpp  test_descriptor_tests.cpp  test_diagnostic_depth_tests.cpp  test_driver_info.cpp  test_error_queue.cpp  test_escape_sequence_tests.cpp  test_function_info.cpp  test_logger.cpp  test_metadata_tests.cpp  test_numeric_struct_tests.cpp  test_odbc_connection.cpp  test_odbc_environment.cpp  test_odbc_error.cpp  test_param_binding_tests.cpp  test_sqlstate_tests.cpp  test_state_machine.cpp  test_statement_tests.cpp  test_transaction_tests.cpp  test_type_info.cpp  test_unicode_tests.cpp
